[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/art/items/wood.png" type="Texture" id=1]
[ext_resource path="res://assets/art/items/item_shadow.png" type="Texture" id=2]
[ext_resource path="res://assets/font/kongtext.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://src/DroppedItem.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="CircleShape2D" id=3]
radius = 24.0

[sub_resource type="CircleShape2D" id=4]
radius = 8.0

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/Icon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "float"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/AnimatedSprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -8 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "itemfloat"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/Icon:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -8 ), Vector2( 0, 0 ) ]
}

[node name="DroppedItem" type="RigidBody2D"]
collision_layer = 0
collision_mask = 1024
gravity_scale = 0.0
linear_damp = 2.0
script = ExtResource( 4 )

[node name="YSort" type="YSort" parent="."]

[node name="Shadow" type="Sprite" parent="YSort"]
scale = Vector2( 2, 2 )
z_index = -2
texture = ExtResource( 2 )

[node name="Icon" type="Sprite" parent="YSort"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Amount" type="Label" parent="."]
margin_left = -24.0
margin_right = 16.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 1 )
text = "99"
align = 2
valign = 1

[node name="PickupTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
autostart = true

[node name="World Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 4 )

[node name="Anims" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 8 )
anims/float = SubResource( 6 )
anims/itemfloat = SubResource( 7 )

[connection signal="body_entered" from="." to="." method="_on_contact"]
[connection signal="body_shape_entered" from="." to="." method="_on_body_contact"]
[connection signal="timeout" from="PickupTimer" to="." method="_on_PickupTimer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_contact"]
[connection signal="animation_finished" from="Anims" to="." method="_on_Anims_animation_finished"]
